fix: make project image responsive on mobile

--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,7 @@ body {
 
 main {
   margin: 0 auto;
-  width: 65%;
+  width: 70%;
 }
 
 h1,
